<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview_server"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="@dimen/ip_edittext_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edittext_hint"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_dot" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="@dimen/ip_edittext_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edittext_hint"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_dot" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="@dimen/ip_edittext_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edittext_hint"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_dot" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="@dimen/ip_edittext_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edittext_hint"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textview_colon" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="@dimen/ip_edittext_width"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/edittext_port_hint"
                android:inputType="numberSigned" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="connect"
            android:text="@string/button_connect"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="206dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="disconnect"
            android:text="@string/button_disconnect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2"
            tools:layout_editor_absoluteX="206dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="getDirectory"
            android:text="@string/button_getdirectory" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:text="TextView"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>